<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="MainActivity">

    <!--status rx-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="29dp"
        android:orientation="horizontal"
        android:layout_alignParentLeft="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/rx"
            android:textStyle="bold"
            android:textColor="@color/colorTransparent" />

        <TextView
            android:id="@+id/readBuffer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/colorTransparent"
            android:text="@string/read_buffer" />
    </LinearLayout>

    <!--status bluetooth-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/status"
            android:ellipsize="end"
            android:maxLines="1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bluetoothStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/bluetooth_status" />
    </LinearLayout>

    <Button
        android:id="@+id/PairedBtn"
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/discover"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="-202dp"
        android:text="@string/show_paired_devices"
        android:layout_alignParentRight="true" />

    <Button
        android:id="@+id/discover"
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="202dp"
        android:text="@string/discover_new_devices"
        android:layout_alignParentRight="true" />

    <Button
        android:id="@+id/loginMain"
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/discover"
        android:text="@string/login"
        android:background="@color/colorPrimaryDark"
        android:layout_alignParentRight="true" />

    <ListView
        android:id="@+id/devicesListView"
        android:layout_width="188dp"
        android:layout_height="446dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:choiceMode="singleChoice"
        android:layout_alignParentLeft="true" />

    <Switch
        android:id="@+id/SwitchBT"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/PairedBtn"
        android:layout_marginTop="85dp"
        android:checked="false"
        android:text="@string/bluetooth"
        android:layout_alignLeft="@+id/PairedBtn" /><!-- text to be displayed whenever current state is checked-->

</RelativeLayout>